* fixed issue with some themes (default theme at least) where default text style for divs was align: justify * added ability to shut off flickr and education.com panels * replaced zillow's server-side scid tracking code with client-side url hashes (basically changed ? to #) * finished adding zip support and neighborhood support within cities * made yelp api return things that were a bit more exciting than gas stations, grocery stores, banks, and restaurants
git-svn-id: https://plugins.svn.wordpress.org/local-market-explorer/branches/2.0@152613 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/lme-client.css
+++ b/includes/lme-client.css
@@ -57,6 +57,9 @@
 	font-size: 100%;
 	font-weight: normal;
 }
+.local_market_explorer div{
+	text-align: left;
+}
 
 /* HEADER */
 .local_market_explorer .lme_header{
